--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,33 +2,38 @@ name: Generate snake animation
 
 on:
   schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+    - cron: "0 */12 * * *" # Executes at midnight and noon UTC daily
 
-  workflow_dispatch:
+  workflow_dispatch: # Allows manual trigger of the workflow
 
-  push:
+  push: # Triggers on push to the master branch
     branches:
-    - master
+      - main
 
 jobs:
   generate:
     permissions:
-      contents: write
+      contents: write # Allows pushing files to the repository
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 10 # Increase timeout to handle any delays
 
     steps:
-      - name: generate snake.svg
+      # Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # Generate the snake.svg file
+      - name: Generate snake.svg
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: dist/snake.svg?palette=github-dark
 
-
-      - name: push snake.svg to the output branch
+      # Push the snake.svg file to the output branch
+      - name: Push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          target_branch: output
-          build_dir: dist
+          target_branch: output # Pushes to the output branch
+          build_dir: dist # Specifies the directory containing the SVG
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
